--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -2,6 +2,7 @@ version: 3
 projects:
   - name: ecs-with-fargate-and-cicd
     dir: .
+    allowed_overrides: [workflow]
     autoplan:
       enabled: true
       when_modified:
